--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-popover": "^1.1.15",
 		"@radix-ui/react-select": "^2.2.6",
+		"bcryptjs": "^3.0.2",
 		"cmdk": "^1.1.1",
 		"embla-carousel-react": "^8.6.0",
 		"input-otp": "^1.4.2",
